# brewlang

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py  main.py
static/: index.html
