[tool.poetry]
name = "brewlang"
version = "0.1.0"
description = "Brew is a pesonalized chatbot to help you make the best of you home coffee brewing."
authors = ["Gian <giancolombi@gmail.com>"]
license = "MIT"
package-mode = false

# Optional: Specify dependencies if you want to include them in the template
[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.26"
openai = "^1"
langchain-openai = "^0.3"
langchain = "^0.3"
langchain_community = "^0.3"
fastapi = "^0"
uvicorn = "^0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src:main:app"